unpackaged/main/default/objects/nbavs__CallEvent__c/nbavs__CallEvent__c.object-meta.xml
<CustomObject>
    <label>Call Event</label>
    <nameField>
        <displayFormat>CE-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>