unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__CallCategory__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallCategory__c</fullName>
    <description>The category of the channel. Also will indicate type of call</description>
    <label>CallCategory</label>
    <length>64</length>
    <type>Text</type>
</CustomField>