unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__CallStart__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallStart__c</fullName>
    <description>Start time of the call in UTC format</description>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>