unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__ChatterId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ChatterId__c</fullName>
    <label>Chatter Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>