unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__ChatterText__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ChatterText__c</fullName>
    <label>Chatter Text</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>