unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__ChatterVisibility__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ChatterVisibility__c</fullName>
    <label>Chatter Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>internalUsers</fullName>
            </value>
            <value>
                <fullName>allUsers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>