unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__DialledNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DialledNumber__c</fullName>
    <description>The dialled number</description>
    <label>DialledNumber</label>
    <type>Phone</type>
</CustomField>