unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__FeatureName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FeatureName__c</fullName>
    <description>Voicemail Feature Name</description>
    <label>FeatureName</label>
    <length>64</length>
    <type>Text</type>
</CustomField>