unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__FromNumber__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FromNumber__c</fullName>
    <description>The from number. Note that we will need to some manipulation get all the numbers out, i.e. we can use E164CallerNumber for the moment, but will need to provide a new macro or a script to provide better support)</description>
    <label>FromNumber</label>
    <type>Phone</type>
</CustomField>