unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__LegDevID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LegDevID__c</fullName>
    <description>The Dev ID that the call was originated from</description>
    <label>LegDevID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>