unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__OwnerID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__OwnerID__c</fullName>
    <description>The User ID that owns the number of the A Leg of the channel. Not necessarily who the channel was connected to however. Typically used to associate a DDI to a user.</description>
    <label>Owner ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>