unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__RingDuration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RingDuration__c</fullName>
    <description>Total ring time before the call was answered</description>
    <label>RingDuration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>