unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__TalkDuration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TalkDuration__c</fullName>
    <description>Total duration of the talk time of the call, i.e. ignores any hunt time, etc</description>
    <label>TalkDuration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>