unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__TotalDuration__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TotalDuration__c</fullName>
    <description>Total duration of the call in seconds</description>
    <label>TotalDuration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>