unpackaged/main/default/objects/nbavs__CallEvent__c/fields/nbavs__UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UUID__c</fullName>
    <description>UUID of the channel</description>
    <label>UUID</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>